fix open and frontpage

--- a/tpage.tex
+++ b/tpage.tex
@@ -67,13 +67,13 @@
             \begin{center}
             \noindent \large 
             \begin{tabular}{llcl}
-                \textit{Président :}    & Prof. Atef            \textsc{Asnacios }       & - & Université Paris Diderot \\
-                \textit{Rapporteurs :}  & Prof. Dr. Dr. Karsten \textsc{Kruse}           & - & Universität des Saarlandes \\
-                                        & Dr. Guillaume         \textsc{Romet-Lemonne}   & - & LEBS - CNRS\\
+                \textit{Président :}    & Atef            \textsc{Asnacios }       & - & Université Paris Diderot \\
+                \textit{Rapporteurs :}  & Karsten \textsc{Kruse}           & - & Universität des Saarlandes \\
+                                        & Guillaume         \textsc{Romet-Lemonne}   & - & LEBS\\
                             
-                \textit{Examinateurs :} & Dr. Laurent           \textsc{Blanchoin}       & - & CEA Grenoble\\
-                \textit{Directeurs : }  & Dr. Timo              \textsc{Betz}            & - & Institut Curie\\
-                                        & Prof. Cécile          \textsc{Sykes}           & - & Institut Curie\\
+                \textit{Examinateurs :} & Laurent           \textsc{Blanchoin}       & - & CEA Grenoble\\
+                \textit{Directeurs : }  & Timo              \textsc{Betz}            & - & Institut Curie\\
+                                        & Cécile          \textsc{Sykes}           & - & Institut Curie\\
                             
             \end{tabular}
             \end{center}
